Add new ble command into the uboot to support bluetooth devices.

--- a/common/Makefile
+++ b/common/Makefile
@@ -62,6 +62,9 @@ obj-y += usb.o usb_hub.o
 obj-$(CONFIG_USB_STORAGE) += usb_storage.o
 endif
 
+# ui commands
+obj-y += cmd_ble.o
+
 # others
 obj-$(CONFIG_BOOTSTAGE) += bootstage.o
 obj-$(CONFIG_CONSOLE_MUX) += iomux.o
